<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>cc.mallet</groupId>
  <artifactId>mallet</artifactId>
  <version>2.1-alpha</version>
  <packaging>jar</packaging>
  <name>MAchine Learning for LanguagE Toolkit (MALLET)</name>
  <description>
    MALLET is a Java-based package for statistical natural language processing,
    document classification, clustering, topic modeling, information extraction,
    and other machine learning applications to text.
  </description>
  <url>http://mallet.cs.umass.edu/</url>

  <licenses>
    <license>
      <name>Apache License Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <url>https://github.com/mimno/Mallet</url>
    <connection>scm:git:git://github.com/mimno/Mallet.git</connection>
    <developerConnection>scm:git:git@github.com:mimno/Mallet.git</developerConnection>
  </scm>

  <developers>
    <developer>
      <id>david.mimno</id>
      <name>David Mimno</name>
      <email>mimno@cornell.edu</email>
    </developer>
    <developer>
      <id>gregory.druck</id>
      <name>Gregory Druck</name>
      <email>gdruck@cs.umass.edu</email>
    </developer>
  </developers>

  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <encoding>UTF-8</encoding>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <error-prone.version>2.3.1</error-prone.version>
    <maven-jacoco-plugin.version>0.8.5</maven-jacoco-plugin.version>
    <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
    <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
    <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
  </properties>

  <build>

    <sourceDirectory>src</sourceDirectory>
    <testSourceDirectory>src</testSourceDirectory>

    <plugins>

      <!-- Compile project using Google Error-Prone -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <compilerId>javac-with-errorprone</compilerId>
          <showWarnings>true</showWarnings>
          <compilerArgs>
            <arg>-Xep:ClassName</arg>
            <arg>-Xep:DepAnn</arg>
            <arg>-Xep:EmptyIf</arg>
            <arg>-Xep:NoAllocation</arg>
            <arg>-Xep:NumericEquality</arg>
            <arg>-Xep:NonCanonicalStaticMemberImport</arg>
            <arg>-Xep:PrimitiveArrayPassedToVarargsMethod</arg>
            <arg>-Xep:StringEquality</arg>
            <!-- <arg>-Xep:Var:ERROR</arg> -->
            <arg>-Xep:Var</arg>
            <arg>-Xep:WildcardImport</arg>
            <arg>-XepDisableWarningsInGeneratedCode</arg>
          </compilerArgs>
          <forceJavacCompilerUse>true</forceJavacCompilerUse>
          <!-- maven-compiler-plugin defaults to targeting Java 5, but our javac only supports >=6 -->
          <source>8</source>
          <target>8</target>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.codehaus.plexus</groupId>
            <artifactId>plexus-compiler-javac-errorprone</artifactId>
            <version>2.8.3</version>
          </dependency>
          <!-- override plexus-compiler-javac-errorprone's dependency on Error Prone with the latest version -->
          <dependency>
            <groupId>com.google.errorprone</groupId>
            <artifactId>error_prone_core</artifactId>
            <version>${error-prone.version}</version>
          </dependency>
        </dependencies>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>${maven-source-plugin.version}</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- Javadoc Generation -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.9.1</version>
        <configuration>
          <additionalparam>-Xdoclint:none</additionalparam>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- Code Coverage Reports -->
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${maven-jacoco-plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- disable signing in order to simplify integration with TravisCI
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>1.5</version>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      -->

      <!-- Unit tests -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <parallel>methods</parallel>
          <threadCount>5</threadCount>
          <skipTests>false</skipTests>
          <systemProperties>
            <property>
              <name>java.util.logging.config.file</name>
              <value>test/resources/logging.properties</value>
            </property>
          </systemProperties>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>com.google.errorprone</groupId>
      <artifactId>error_prone_annotations</artifactId>
      <version>${error-prone.version}</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache-extras.beanshell</groupId>
      <artifactId>bsh</artifactId>
      <version>2.0b6</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.carrotsearch/hppc -->
    <dependency>
      <groupId>com.carrotsearch</groupId>
      <artifactId>hppc</artifactId>
      <version>0.8.1</version>
    </dependency>
  </dependencies>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

  <profiles>
    <profile>
      <id>publish-on-github-packages</id>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-source-plugin</artifactId>
            <version>${maven-source-plugin.version}</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <phase>package</phase>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
      <distributionManagement>
        <repository>
          <id>github</id>
          <name>GitHub Packages</name>
          <url>https://maven.pkg.github.com/mimno/mallet</url>
        </repository>
      </distributionManagement>
    </profile>
  </profiles>
</project>
